--- a/sass/components/_dividers.scss
+++ b/sass/components/_dividers.scss
@@ -23,3 +23,7 @@
     height: 12.2vh;
   }
 }
+
+#experience-divider-top {
+  transform: rotate(180deg) translateY(-0.2vh);
+}
